--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb://127.0.0.1:27017
+MONGODB_URI=mongodb+srv://zalkebhavesh:Dp6l5YS5OcUspgVb@cluster0.nnkl0ip.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=4000
 FRONTEND_URI=http://localhost:5173
 GOOGLE_GEMINI_KEY=AIzaSyBTXRGExZhIMmiQNjQmHvfinMdbou6j3_Q
