update the link

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 MONGODB_URI=mongodb+srv://zalkebhavesh:Dp6l5YS5OcUspgVb@cluster0.nnkl0ip.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=4000
 # FRONTEND_URI=http://localhost:5173
-FRONTEND_URI=https://farm-frontend-xtfq.vercel.app
+FRONTEND_URI=https://farm-frontend-dusky.vercel.app/
 GOOGLE_GEMINI_KEY=AIzaSyBTXRGExZhIMmiQNjQmHvfinMdbou6j3_Q
 REFRESH_TOKEN_SECRET=bhavesh
 REFRESH_TOKEN_EXPIRY=1d
