--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@
 
 MONGODB_URI=mongodb+srv://zalkebhavesh:Dp6l5YS5OcUspgVb@cluster0.nnkl0ip.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=4000
-# FRONTEND_URI=http://localhost:5173
-FRONTEND_URI=https://farm-frontend-beta.vercel.app
+FRONTEND_URI=http://localhost:5173
+# FRONTEND_URI=https://farm-frontend-beta.vercel.app
 
 GOOGLE_GEMINI_KEY=AIzaSyBTXRGExZhIMmiQNjQmHvfinMdbou6j3_Q
 REFRESH_TOKEN_SECRET=bhavesh
